test/errors/unterminated_string.sg
' Test unterminated string literal
(def test "unterminated